--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
+body {
+  background-color: #d9dadd;
+}
+
+/*flex*/
+.d-flex {
+  display: flex;
+}
+.justify-content-between {
+  justify-content: space-between;
+}
+.justify-content-center {
+  justify-content: center;
+}
+.justify-content-evenly {
+  justify-content: space-evenly;
+}
+.align-items-center {
+  align-items: center;
+}
+.flex-column {
+  flex-direction: column;
+}
+/**/
+/*misc*/
+.w-280 {
+  width: 280px;
+}
+.m-0 {
+  margin: 0;
+}
+.b-r {
+  border-right: 1px solid black;
+}
+.text-center {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/**/
+.grid {
+  display: grid;
+  grid-template-columns: 1fr;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.item {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  border: 1px solid black;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button {
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.32);
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  color: black;
+  margin: 0 25px 0 25px;
 }
-
-.App-link {
-  color: #61dafb;
+.button:hover {
+  background-color: rgba(255, 255, 255, 0.55);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-2 {
+  text-decoration: none;
+  background-color: rgba(105, 135, 245, 0.51);
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  color: black;
+  text-align: center;
+  cursor: pointer;
+  margin: 10px;
+}
+.button-3 {
+  text-decoration: none;
+  background-color: rgba(255, 0, 38, 0.51);
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  color: black;
+  text-align: center;
+  cursor: pointer;
+  margin: 10px;
+}
+.logo {
+  height: 80px;
+}
+.input {
+  outline: none;
+  padding: 5px;
+  margin: 5px;
+  font-size: 18px;
+  border: none;
+  border-bottom: 3px solid white;
+}
+.input:focus {
+  border-bottom: 3px solid blue;
 }
