--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #d9dadd;
+
 }
 
 /*flex*/
@@ -49,7 +49,6 @@ body {
 .button {
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.32);
-  border-radius: 5px;
   padding: 5px;
   font-size: 16px;
   color: black;
@@ -60,7 +59,7 @@ body {
 }
 .button-2 {
   text-decoration: none;
-  background-color: rgba(105, 135, 245, 0.51);
+  background-color: #ffffff;
   border-radius: 5px;
   padding: 5px;
   font-size: 16px;
@@ -71,11 +70,10 @@ body {
 }
 .button-3 {
   text-decoration: none;
-  background-color: rgba(255, 0, 38, 0.51);
-  border-radius: 5px;
+  border: 1px solid black;
   padding: 5px;
   font-size: 16px;
-  color: black;
+  color: #cd1717;
   text-align: center;
   cursor: pointer;
   margin: 10px;
